--- a/css/style.scss
+++ b/css/style.scss
@@ -1,19 +1,21 @@
 @import './init';
 @import './layout';
 
- .main-title {
-    text-transform: uppercase;
-    font-weight: 800;
-    font-size: 40px;
-  }
+
+.main-title {
+  text-transform: uppercase;
+  font-size: 50px;
+  font-weight: 800;
+}
 
 .me {
-      width: 100%;
-      background-image: url('../asset/image/me.png');
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center bottom;
-    }
+  width: 100%;
+  background-image: url('../asset/image/me.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center bottom;
+}
 
-
- 
+.preview-image::before {
+  background-color: rgba(128, 128, 128, 0.144);
+}
