--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,16 +1,22 @@
-header {
-  position: absolute;
+@mixin main-padding {
+  padding: 0 10%;
+}
+
+.nav-list {
   display: flex;
-  width: 100%;
   justify-content: space-between;
   align-items: center;
-  line-height: 8vh;
+  width: 100%;
+  height: 8vh;
+  @include main-padding();
 }
+
 
 .landing {
   display: grid;
   grid-template-rows: 1fr 1fr;
-  height: 100vh;
+  height: 92vh;
+  @include main-padding();
 
   .top {
     display: flex;
@@ -40,7 +46,12 @@ header {
 .project-landing {
   display: flex;
   flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100vh;
+  z-index: -1;
 }
 
 .project-landing-top {
@@ -59,7 +70,6 @@ header {
 
 .project-title {
   position: relative;
-  font-size: 2rem;
   font-weight: bold;
 }
 
@@ -83,13 +93,65 @@ header {
   }
 }
 
-
-
-
-// common
-.main-padding {
-  padding: 0 10%;
+.project-image {
+  width: 100%;
+  height: 100%;
+  background-image: url('../asset/image/image1.jpg');
+  background-size: cover;
+  background-position: center;
 }
+
+// project detail
+.project-detail-main {
+  @include main-padding();
+  
+  .project-title {
+    margin-top: 1.4rem;
+  }
+}
+
+.project-detail-title {
+  margin-bottom: 0.4rem;
+}
+
+
+.preview-image {
+  width: 100%;
+  position: relative;
+  margin: 6rem 0;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+.margin-bottom {
+  margin-bottom: 4rem;
+}
+
+.skill-list {
+  display: flex;
+}
+
+.skill {
+  background-color: rgb(49, 49, 49);
+  width: 50px;
+  height: 50px;
+  margin-right: 1rem;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+
 
 // media query
 @media (min-width: 1000px) {
