--- a/css/style.css
+++ b/css/style.css
@@ -14,19 +14,23 @@ a {
   text-decoration: none;
 }
 
-header {
-  position: absolute;
+h1 {
+  font-size: 60px;
+}
+
+.nav-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 100%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  line-height: 8vh;
+  width: 100%;
+  height: 8vh;
+  padding: 0 10%;
 }
 
 .landing {
@@ -34,7 +38,8 @@ header {
   display: grid;
   -ms-grid-rows: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
-  height: 100vh;
+  height: 92vh;
+  padding: 0 10%;
 }
 
 .landing .top {
@@ -77,7 +82,12 @@ header {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   height: 100vh;
+  z-index: -1;
 }
 
 .project-landing-top {
@@ -112,7 +122,6 @@ header {
 
 .project-title {
   position: relative;
-  font-size: 2rem;
   font-weight: bold;
 }
 
@@ -136,8 +145,70 @@ header {
   margin: 0 1rem;
 }
 
-.main-padding {
+.project-image {
+  width: 100%;
+  height: 100%;
+  background-image: url("../asset/image/image1.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.project-detail-main {
   padding: 0 10%;
+}
+
+.project-detail-main .project-title {
+  margin-top: 1.4rem;
+}
+
+.project-detail-title {
+  margin-bottom: 0.4rem;
+}
+
+.preview-image {
+  width: 100%;
+  position: relative;
+  margin: 6rem 0;
+}
+
+.preview-image::before {
+  content: "";
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.margin-bottom {
+  margin-bottom: 4rem;
+}
+
+.skill-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.skill {
+  background-color: #313131;
+  width: 50px;
+  height: 50px;
+  margin-right: 1rem;
+  border-radius: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: white;
 }
 
 @media (min-width: 1000px) {
@@ -167,8 +238,8 @@ header {
 
 .main-title {
   text-transform: uppercase;
+  font-size: 50px;
   font-weight: 800;
-  font-size: 40px;
 }
 
 .me {
@@ -177,5 +248,9 @@ header {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center bottom;
+}
+
+.preview-image::before {
+  background-color: rgba(128, 128, 128, 0.144);
 }
 /*# sourceMappingURL=style.css.map */
