--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -3,14 +3,23 @@
 }
 
 .nav-list {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 8vh;
+  background-color: white;
+  z-index: 1000;
   @include main-padding();
 }
 
+main {
+  margin-top: 8vh;
+}
 
 .landing {
   display: grid;
@@ -24,16 +33,15 @@
     justify-content: center;
 
     .contact {
-       margin-top: 1rem;
-       margin-bottom: 2rem;
+      margin-top: 1rem;
+      margin-bottom: 2rem;
     }
-    
+
     .contact img {
       margin-right: 1rem;
     }
-
   }
-  
+
   .bottom {
     display: flex;
     justify-content: center;
@@ -42,69 +50,49 @@
   }
 }
 
+// project
+.project-container {
+  display: grid;
+  grid-template-columns: 1fr;
 
-.project-landing {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  z-index: -1;
-}
-
-.project-landing-top {
-  flex: 2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.project-landing-bottom {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.project-title {
-  position: relative;
-  font-weight: bold;
-}
-
-.project-number {
-  position: absolute;
-  left: -1rem;
-  top: -0.4rem;
-  font-size: 0.8rem;
-}
-
-.project-count {
-  position: absolute;
-  bottom: 2vh;
-
-  .line {
-    width: 60px;
-    height: 1px;
-    background-color: black;
-    display: inline-block;
-    margin: 0 1rem;
+  @media (min-width: 800px) {
+    & {
+      margin: 0 10%;
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 3rem;
+    }
   }
 }
 
-.project-image {
+.project {
+  width: 90%;
+  margin-bottom: 5rem;
+  position: relative;
+
+  .title {
+    font-size: 2.4rem;
+    line-height: 1.1;
+    text-align: end;
+    font-weight: bold;
+  }
+
+  &::after {
+    content: attr(data-number);
+    position: absolute;
+    top: 0;
+    right: -1.8rem;
+    font-weight: bold;
+  }
+}
+
+.project-representative-image {
   width: 100%;
-  height: 100%;
-  background-image: url('../asset/image/image1.jpg');
-  background-size: cover;
-  background-position: center;
 }
 
 // project detail
 .project-detail-main {
   @include main-padding();
-  
+
   .project-title {
     margin-top: 1.4rem;
   }
@@ -113,7 +101,6 @@
 .project-detail-title {
   margin-bottom: 0.4rem;
 }
-
 
 .preview-image {
   width: 100%;
@@ -152,7 +139,6 @@
   color: white;
 }
 
-
 // media query
 @media (min-width: 1000px) {
   .landing {
@@ -171,6 +157,4 @@
   .project-landing-top {
     flex: 1;
   }
-
-
 }
