--- a/css/_init.scss
+++ b/css/_init.scss
@@ -1,9 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400&family=Roboto:wght@100;300;400&family=Yeseva+One&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Noto Sans KR", "Roboto", sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.028rem;
+}
+
+h1 {
+  font-family: "Yeseva One", cursive;
+  font-size: 4rem;
+  line-height: 1.2;
+  text-transform: uppercase;
+}
 
 li {
   list-style: none;
@@ -12,8 +26,4 @@ li {
 a {
   color: black;
   text-decoration: none;
-}
-
-h1 {
-  font-size: 60px;
 }
