--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,22 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400&family=Roboto:wght@100;300;400&family=Yeseva+One&display=swap");
 * {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+}
+
+body {
+  font-family: "Noto Sans KR", "Roboto", sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.028rem;
+}
+
+h1 {
+  font-family: "Yeseva One", cursive;
+  font-size: 4rem;
+  line-height: 1.2;
+  text-transform: uppercase;
 }
 
 li {
@@ -14,216 +28,141 @@ a {
   text-decoration: none;
 }
 
-h1 {
-  font-size: 60px;
+.background {
+  width: 100vw;
+  height: 100vh;
+  background-color: #550275;
+  position: absolute;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: -webkit-transform 0.7s ease-out;
+  transition: -webkit-transform 0.7s ease-out;
+  transition: transform 0.7s ease-out;
+  transition: transform 0.7s ease-out, -webkit-transform 0.7s ease-out;
 }
 
-.nav-list {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
+.background.slide-in {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.header-menu-list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 80%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  height: 8vh;
-  background-color: white;
-  z-index: 1000;
-  padding: 0 10%;
-}
-
-main {
-  margin-top: 8vh;
-}
-
-.landing {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-  height: 92vh;
-  padding: 0 10%;
-}
-
-.landing .top {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.landing .top .contact {
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-}
-
-.landing .top .contact img {
-  margin-right: 1rem;
-}
-
-.landing .bottom {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   position: relative;
-  overflow: hidden;
-}
-
-.project-container {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-}
-
-@media (min-width: 800px) {
-  .project-container {
-    margin: 0 10%;
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-    -webkit-column-gap: 3rem;
-            column-gap: 3rem;
-  }
-}
-
-.project {
-  width: 90%;
-  margin-bottom: 5rem;
-  position: relative;
-}
-
-.project .title {
-  font-size: 2.4rem;
-  line-height: 1.1;
-  text-align: end;
+  left: 10%;
+  text-transform: uppercase;
   font-weight: bold;
+  line-height: 4rem;
 }
 
-.project::after {
-  content: attr(data-number);
-  position: absolute;
-  top: 0;
-  right: -1.8rem;
-  font-weight: bold;
-}
-
-.project-representative-image {
-  width: 100%;
-}
-
-.project-detail-main {
-  padding: 0 10%;
-}
-
-.project-detail-main .project-title {
-  margin-top: 1.4rem;
-}
-
-.project-detail-title {
-  margin-bottom: 0.4rem;
-}
-
-.preview-image {
-  width: 100%;
-  position: relative;
-  margin: 6rem 0;
-}
-
-.preview-image::before {
-  content: "";
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  left: 50%;
-  top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.margin-bottom {
-  margin-bottom: 4rem;
-}
-
-.skill-list {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.skill {
-  background-color: #313131;
-  width: 50px;
-  height: 50px;
-  margin-right: 1rem;
-  border-radius: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.header-menu-list.to-white a {
   color: white;
 }
 
-@media (min-width: 1000px) {
-  .landing {
-    -ms-grid-columns: 1fr 2fr;
-        grid-template-columns: 1fr 2fr;
-    -ms-grid-rows: 1fr;
-        grid-template-rows: 1fr;
-  }
-  .landing .top {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .project-landing {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-  }
-  .project-landing-top {
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-  }
+.landing-main-page {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  top: 20vh;
 }
 
-.main-title {
-  text-transform: uppercase;
-  font-size: 50px;
-  font-weight: 800;
+.introduce-container {
+  position: relative;
+  z-index: -1;
 }
 
-.me {
-  width: 100%;
-  background-image: url("../asset/image/me.png");
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center bottom;
+.introduce-container:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  --transparentEnd: 40%;
+  --colorStart: 60%;
+  background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(white));
+  background: linear-gradient(transparent var(--transparentEnd), white var(--colorStart));
+  background-size: 100% 300%;
+  background-position-y: 100%;
+  -webkit-transition: background-position-y 2s cubic-bezier(0.05, 1.03, 1, 1);
+  transition: background-position-y 2s cubic-bezier(0.05, 1.03, 1, 1);
 }
 
-.preview-image::before {
-  background-color: rgba(128, 128, 128, 0.144);
+.introduce-container.fade-in::after {
+  background-position-y: 0;
+}
+
+.introduce {
+  font-size: 4rem;
+  font-weight: bold;
+}
+
+.introduce-more-container {
+  position: absolute;
+  overflow: hidden;
+}
+
+.introduce-more {
+  width: 300px;
+  color: #ecc2ff;
+  line-height: 2;
+  font-weight: 300;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: -webkit-transform 1s ease-in-out;
+  transition: -webkit-transform 1s ease-in-out;
+  transition: transform 1s ease-in-out;
+  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
+}
+
+.introduce-more.show {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.introduce-more-badge {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: 1.6rem;
+  letter-spacing: 0.2rem;
+  background-color: #550275;
+  color: white;
+  cursor: pointer;
+  opacity: 0;
+  -webkit-transition: opacity 1.4s ease-out, color 1.4s ease-out, background-color 1.4s ease-out;
+  transition: opacity 1.4s ease-out, color 1.4s ease-out, background-color 1.4s ease-out;
+}
+
+.introduce-more-badge.show {
+  opacity: 1;
+}
+
+.introduce-more-badge.clicked {
+  color: #550275;
+  background-color: white;
 }
 /*# sourceMappingURL=style.css.map */
