--- a/css/style.scss
+++ b/css/style.scss
@@ -1,21 +1,113 @@
-@import './init';
-@import './layout';
+@import "./init";
 
+.background {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(85, 2, 117);
+  position: absolute;
+  transform: translateY(-100%);
+  transition: transform 0.7s ease-out;
 
-.main-title {
+  &.slide-in {
+    transform: translateY(0);
+  }
+}
+
+.header-menu-list {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+  position: relative;
+  left: 10%;
   text-transform: uppercase;
-  font-size: 50px;
-  font-weight: 800;
+  font-weight: bold;
+  line-height: 4rem;
+
+  &.to-white a {
+    color: white;
+  }
 }
 
-.me {
-  width: 100%;
-  background-image: url('../asset/image/me.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center bottom;
+.landing-main-page {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 20vh;
 }
 
-.preview-image::before {
-  background-color: rgba(128, 128, 128, 0.144);
+.introduce-container {
+  position: relative;
+  z-index: -1;
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    --transparentEnd: 40%;
+    --colorStart: 60%;
+    background: linear-gradient(
+      transparent var(--transparentEnd),
+      white var(--colorStart)
+    );
+    background-size: 100% 300%;
+    background-position-y: 100%;
+    transition: background-position-y 2s cubic-bezier(0.05, 1.03, 1, 1);
+  }
+
+  &.fade-in::after {
+    background-position-y: 0;
+  }
+}
+
+.introduce {
+  font-size: 4rem;
+  font-weight: bold;
+}
+
+.introduce-more-container {
+  position: absolute;
+  overflow: hidden;
+}
+
+.introduce-more {
+  width: 300px;
+  color: rgb(236, 194, 255);
+  line-height: 2;
+  font-weight: 300;
+  transform: translateY(-100%);
+  transition: transform 1s ease-in-out;
+
+  &.show {
+    transform: translateY(0);
+  }
+}
+
+.introduce-more-badge {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-top: 1.6rem;
+  letter-spacing: 0.2rem;
+  background-color: rgb(85, 2, 117);
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 1.4s ease-out, color 1.4s ease-out,
+    background-color 1.4s ease-out;
+
+  &.show {
+    opacity: 1;
+  }
+
+  &.clicked {
+    color: rgb(85, 2, 117);
+    background-color: white;
+  }
 }
